# pdf-writer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
benches/: oneshot.rs
examples/: chunks.rs  forms.rs  hello.rs  icc.rs  icc_based.rs  image.rs  image_cmyk.rs  limits.rs  separations.rs  soft_masks.rs  video.rs
src/: actions.rs  annotations.rs  attributes.rs  buf.rs  chunk.rs  color.rs  content.rs  files.rs  font.rs  forms.rs  functions.rs  interactive.rs  lib.rs  macros.rs  object.rs  renditions.rs  renumber.rs  stream.rs  structure.rs  text.rs  transitions.rs  xobject.rs
tests/: tests.rs
