[package]
name = "pdf-writer"
version = "0.7.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "A step-by-step PDF writer."
repository = "https://github.com/typst/pdf-writer"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["encoding", "multimedia"]
keywords = ["pdf", "writer"]

[dependencies]
bitflags = "1.1"
itoa = "1"
ryu = "1"

[dev-dependencies]
iai = "0.1"
miniz_oxide = "0.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[[bench]]
name = "oneshot"
harness = false
