[package]
name = "pdf-writer"
version = "0.10.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "A step-by-step PDF writer."
repository = "https://github.com/typst/pdf-writer"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["encoding", "multimedia"]
keywords = ["pdf", "writer"]

[dependencies]
bitflags = "2"
itoa = "1"
memchr = "2"
ryu = "1"

[dev-dependencies]
iai = "0.1"
miniz_oxide = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jpeg-decoder = "0.3.1"
jpeg-encoder = "0.6.0"

[[bench]]
name = "oneshot"
harness = false
